# ProofAssistantSeminar

./: .gitignore  Dockerfile  Makefile  README.md  automation.v  inductive.v  inductive_solution.v  magic.v  nat.v  nat_golf.v  nat_solution.v  rocq-ProofAssistantSeminar-dev.opam  ssrinductive_solution.v  ssrnat.v  ssrnat_golf.v  ssrnat_solution.v  tuto1_nat_solution.v  tuto1_ssrnat.v  tuto1_ssrnat_golf.v  tuto2_ssrinductive.v  tuto3_automation.v  tuto3_automation_solution.v
.devcontainer/: devcontainer.json
